implemented chat feature - issue remaining with message order

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="node_modules/lodash/lodash.js"></script>
   <script src="node_modules/angular/angular.js"></script>
   <script src="src/config/youtube.js"></script>
+  <script src="src/config/chat.js"></script>
   <script src="src/data/exampleVideoData.js"></script>
 </head>
 <body>
@@ -22,5 +23,8 @@
   <script src="src/components/search.js"></script>
   <script src="src/components/videoListEntry.js"></script>
   <script src="src/components/videoList.js"></script>
+  <script src="src/components/chat.js"></script>
+  <script src="src/components/chatFeed.js"></script>
+  <script src="src/components/chatMessageEntry.js"></script>
 </body>
 </html>
